enable external port

--- a/demo-app/values.yaml
+++ b/demo-app/values.yaml
@@ -40,8 +40,9 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
-  type: ClusterIP
+  type: LoadBalancer
   port: 80
+  externalPort: 81
 
 ingress:
   enabled: false
