enable external port - typo

--- a/demo-app/values.yaml
+++ b/demo-app/values.yaml
@@ -42,7 +42,7 @@ securityContext: {}
 service:
   type: LoadBalancer
   port: 80
-  taregetPort: 444
+  targetPort: 444
 
 ingress:
   enabled: false
